Updated the ejb-client to be able to connect unsecured; added the ability to specify how to connect and what tests to execute as command-line args.